[package]
name = "PortForwader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "portfwd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
